# FUP

./: CMakeLists.txt  main.cpp
Matrices/: bingo.cpp  magicSquare.cpp  sumElementsOnMatrix.cpp  symmetricMatrix.cpp
Pointers/: aluno.cpp  engine.cpp  testes.cpp
Vectors/: sumElementsOnVector.cpp
